syntax = "proto3";

package proto;

message Empty {}

message WorkerRegisterInfo {
  uint32 id = 1;
  string ip = 2;
  uint32 port = 3;
}

message RecordMessage {
  bytes record = 1;
}