syntax = "proto3";

package proto;

import "common.proto";

service MasterService {
  rpc Register(RegisterRequest) returns (RegisterReply);
}

message RegisterRequest {
  string ip = 1;
  uint32 port = 2;
}

message RegisterReply {
  int32 id = 1;
}
